# Distributed_Reservoir_Proj

./: README.md  compose-lorenz-lstm.yaml  compose-lorenz-res.yaml  compose-rossler-lstm.yaml  compose-rossler-res.yaml  compose.yaml  plot_results.py  setup.py
docker/: Dockerfile  environment.yaml
docker/entrypoints/: agent_entrypoint.sh  edge_entrypoint.sh
experiements/: main.py
results/: lorenz_agent_node_groundtruth.csv  lorenz_agent_node_predictions.csv  lorenz_agent_node_results.csv  rossler_agent_node_groundtruth.csv  rossler_agent_node_predictions.csv  rossler_agent_node_results.csv
ros2_ws/src/distributed_reservoir/: package.xml  setup.cfg  setup.py
ros2_ws/src/distributed_reservoir/config/: lorenz_reservoir.yaml  rossler_lstm.yaml  rossler_reservoir.yaml
ros2_ws/src/distributed_reservoir/config/example/: lorenz_lstm.yaml
ros2_ws/src/distributed_reservoir/distributed_reservoir/: agent.py  edge_server.py  functions.py  logger.py  lstm.py  reservoir.py
ros2_ws/src/distributed_reservoir/launch/: agent.launch.py  edge_server.launch.py
ros2_ws/src/reservoir_eval/distributed_reservoir/: agent.py  edge_server.py  functions.py  logger.py  package.xml  reservoir.py
